fix(backend): Fix Vulnerability

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <org.projectlombok.version>1.18.28</org.projectlombok.version>
         <liquibase.version>4.26.0</liquibase.version>
         <liquibase-hibernate5.version>4.25.1</liquibase-hibernate5.version>
-        <spring-boot.version>3.2.3</spring-boot.version>
+        <spring-boot.version>3.2.5</spring-boot.version>
         <org.zalando.problem-spring-web>0.26.0</org.zalando.problem-spring-web>
         <org.springdoc.springdoc-openapi-ui>2.1.0</org.springdoc.springdoc-openapi-ui>
         <org.springframework.cloud>4.1.1</org.springframework.cloud>
@@ -92,6 +92,13 @@
                 <artifactId>antisamy</artifactId>
                 <version>${org.owasp.antisamy}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>6.1.6</version>
+            </dependency>
+
 
         </dependencies>
 
